--- a/style.css
+++ b/style.css
@@ -590,7 +590,10 @@ header .fa-times{    /* To set details of the X that appears when you click menu
     width:70vw;
     margin: 10px;
     border-radius: 5%;
-    box-shadow: 0 0 0.7rem 0.6rem rgba(17, 51, 59, 0.3);
+    /* box-shadow: 0 0 0.7rem 0.6rem rgba(17, 51, 59, 0.3); */
+    box-shadow: 0 .8rem 1rem 0.6rem rgba(54, 54, 54, 0.3);
+    margin-top: 25px;
+    margin-bottom: 25px;
   }
 
   .about .row .content{
