--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ html{
   font-size: 2rem;
   text-align: center;
   font-weight: 500;
-  color:rgb(128, 126, 126);
+  color:rgb(5, 22, 29);
 }
 
 header{ /*To style the navbar */
@@ -228,7 +228,7 @@ header .fa-bars{ /* To style the bars on the right for menu */
 
 .about .row .image img{  /* To style the image in the about us div */
   height:100vh;
-  width:40vw;
+  width:34vw;
   margin-top: 10px;
   border-radius: 5%;
   box-shadow: 0 0 0.7rem 0.6rem rgba(17, 51, 59, 0.3);
@@ -270,8 +270,21 @@ header .fa-bars{ /* To style the bars on the right for menu */
 
 .teacher{
   background:#f9f9f9;
+  background:linear-gradient(rgba(2, 1, 1, 0.8),rgba(20, 0, 4, 0.8)), url(images/ship3.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  z-index: 0;
+  overflow:hidden;
+  position: relative;
 }
 
+#price {
+  color: whitesmoke;
+}
+#pricetitle {
+  color: rgb(163, 159, 159);
+}
 .teacher .card-container{
   display: flex;
   align-items: center;
@@ -281,24 +294,25 @@ header .fa-bars{ /* To style the bars on the right for menu */
 }
 
 .teacher .card-container .card{
-  padding:2rem;
-  margin: 2rem;
-  background:#fff;
+  padding:2rem; /*For padding for contents inside the card */
+  margin: 2rem; /* To set the margins between the cards */
+  background:rgb(206, 205, 205);
   text-align: center;
   width:28rem;
-  box-shadow: 0 .3rem .5rem rgba(0,0,0,.3);
+  box-shadow: 0 0 .7rem .5rem rgba(136, 135, 135, 0.3);
+  border-radius: 1rem;
 }
 
 .teacher .card-container .card img{
-  height:30rem;
+  height:10rem;
   width:100%;
   object-fit: cover;
-  filter: grayscale();
-  transition: .2s;
+  filter: grayscale(0);
+  transition: .1s;
 }
 
 .teacher .card-container .card:hover img{
-  filter: grayscale(0);
+  filter: grayscale();
 }
 
 .teacher .card-container .card h3{
@@ -322,50 +336,58 @@ header .fa-bars{ /* To style the bars on the right for menu */
   color:var(--violet);
 }
 
-.course .box-container{
+.course{
+background-color: rgb(228, 227, 227);
+height: 100vh;
+}
+
+.course .box-container{  /*To set the styling for the courses section */
   width:85%;
   display: flex;
   justify-content: center;
   margin:0 auto;
-  padding-top: 4rem;
+  padding-top: 6rem;
   flex-wrap: wrap;
 }
 
-.course .box-container .box{
-  height:18rem;
+.course .box-container .box{ /* To design the card */
+  height:29rem;
   width:25rem;
   margin:3.5rem 2rem;
   text-align: center;
+  background-color: #fff;
   border-radius: 1rem;
-  box-shadow: .3rem .3rem 0 .1rem var(--violet),
-              .5rem .5rem .5rem rgba(0,0,0,.3);
+  box-shadow: 0 .5rem .7rem .5rem rgba(2, 0, 0, 0.3);
+  /* box-shadow: .3rem .3rem 0 .1rem var(--violet),
+              .5rem .5rem .5rem rgba(0,0,0,.3); */
 }
 
-.course .box-container .box i{
+.course .box-container .box i{ /* To design the icons on the card */
   height:10rem;
   width:10rem;
   line-height: 8rem;
   text-align: center;
   color:#fff;
   border-radius: 50%;
-  background:var(--pink);
+  background:#040f0f;
   margin-top: -4rem;
   border:1rem solid #fff;
-  border-left:1rem solid var(--pink);
-  border-right:1rem solid var(--pink);
+  border-left:1rem solid #040f0f;
+  border-right:1rem solid #040f0f;
   box-shadow: 0 0 0 1rem #fff inset;
   font-size: 3.5rem;
 }
 
-.course .box-container .box h3{
+.course .box-container .box h3{  /* To design the Headings on the card */
   font-size: 2rem;
   color:var(--violet);
 }
 
-.course .box-container .box p{
+.course .box-container .box p{ /* To design the paragraphs on the card */
   font-size: 1.5rem;
   color:#999;
-  padding:1rem 0;
+  padding:1rem 3rem;
+  font-weight: 500;
 }
 
 .review{
@@ -383,8 +405,8 @@ header .fa-bars{ /* To style the bars on the right for menu */
   width:28rem;
   padding-bottom: 1rem;
   text-align: center;
-  box-shadow: 0 .3rem .5rem rgba(0,0,0,.3);
-  background:#fff;
+  box-shadow: 0 .6rem .6rem .5rem rgba(0, 0, 0, 0.3);
+  background:rgb(226, 225, 225);
   margin:4rem 2rem;
 }
 
@@ -403,12 +425,15 @@ header .fa-bars{ /* To style the bars on the right for menu */
   font-size: 2rem;
   color:var(--pink);
   padding:0 .5rem;
+  margin: 20px;
 }
 
 .review .box-container .box p{
   font-size: 1.4rem;
-  color:#999;
+  color:rgb(47, 68, 70);
   padding:0 1.3rem;
+  margin: 10px;
+  font-weight: 400;
 }
 
 .review .box-container .box .stars i{
@@ -418,7 +443,7 @@ header .fa-bars{ /* To style the bars on the right for menu */
 }
 
 .contact{
-  background:#333;
+  background: #040f0f;
 }
 
 .contact .row{
@@ -428,10 +453,21 @@ header .fa-bars{ /* To style the bars on the right for menu */
   padding:5rem 0;
 }
 
-.contact .row .image img{
-  width: 50vw;
-  height:70vh;
+.contact .row .image iframe{
+  width: 40vw;
+  height:75vh;
+  padding-right: 3rem;
+  border-radius: 20px;
 }
+
+#contact1 {
+  color: #fff;
+}
+
+#contact2 {
+  color: rgb(179, 180, 180);
+}
+
 
 .contact .row .form-container{
   width:50%;
@@ -449,6 +485,7 @@ header .fa-bars{ /* To style the bars on the right for menu */
   color:var(--pink);
   font-size: 1.7rem;
   transition: .2s linear;
+  background-color: #dcdddd;
 }
 
 .contact .row .form-container input:focus, textarea:focus{
@@ -460,6 +497,7 @@ header .fa-bars{ /* To style the bars on the right for menu */
   border-radius: 1rem;
   padding:1rem; 
   resize: none;
+  background-color: #dcdddd;
 }
 
 .contact .row .form-container input[type="submit"]{
@@ -474,7 +512,7 @@ header .fa-bars{ /* To style the bars on the right for menu */
 .contact .row .form-container input[type="submit"]:hover{
   background:none;
   color:var(--pink);
-  border:.2rem solid var(--pink);
+  border:.2rem solid #fff;
 }
 
 .footer{
@@ -600,23 +638,36 @@ header .fa-times{    /* To set details of the X that appears when you click menu
 
   .about .row .content{  /* To style the content when on mobile */
     padding: 0 6.5rem;
+    margin-bottom: 20px;
   }
 
-  .course .box-container{
+  .course{
+    height:100rem;
+  }
+
+  .course .box-container{ /*To set the styling for the courses section */
     width:100%;
+    height:29rem;
+    margin:3.5rem 2rem;
   }
 
   .contact .row{
     flex-flow: column;
   }
 
-  .contact .row .image img{
+  .contact .row .image iframe{
     height:50vh;
     width:90vw;
+    border-radius: 9px;
   }
 
   .contact .row .form-container{
     width:90%;
     padding:0;
+  }
+}
+@media (max-width:500px){
+  .course{
+    height:130rem;
   }
 }
