--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   text-decoration: none;
   outline: none;
   margin: 0; padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box;  
 }
 
 *::selection{
@@ -286,6 +286,85 @@ header .fa-bars{ /* To style the bars on the right for menu */
   border-radius: 16px !important;
   margin-bottom: 10px;
 }
+
+/*-------------- Start of Services section styling --------------*/
+.services-section{
+  background: rgb(7, 20, 29);
+  background-size: cover;
+  padding: 60px 0;
+}
+.inner-width{
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 20px;
+  overflow: hidden;
+}
+.section-title{
+  text-align: center;
+  color: #ddd;
+  text-transform: uppercase;
+  font-size: 30px;
+}
+.border{
+  width: 160px;
+  height: 2px;
+  background: #82ccdd;
+  margin: 40px auto;
+}
+.services-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.service-box{
+  max-width: 33.33%;
+  padding: 10px;
+  text-align: center;
+  color: #ddd;
+  cursor: pointer;
+}
+
+.service-icon{
+  display: inline-block;
+  width: 70px;
+  height: 70px;
+  border: 3px solid #82ccdd;
+  color: #82ccdd;
+  transform: rotate(45deg);
+  margin-bottom: 30px;
+  margin-top: 16px;
+  transition: 0.3s linear;
+}
+.service-box:hover {
+  background: #456e79;
+  opacity: 0.9;
+  cursor: pointer; /*To make cursor change to pointer when on hover */
+  transition: 0.9s; /*To set the speed of the hover effect */
+  border-radius: 10%; /* To set the corners of the hover boxes */
+}
+.service-icon i{
+  line-height: 70px;
+  transform: rotate(-45deg);
+  font-size: 26px;
+}
+
+.service-title{
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  font-weight: 500;
+}
+.service-desc{
+  font-size: 14px;
+  margin-top: 30px;
+  margin-right: 30px;
+  color: rgb(160, 156, 156);
+}
+/*-------------- End of Services section styling --------------*/
+
+
 
 /*-------------- Start of teacher section styling --------------*/
 .teacher{
@@ -747,4 +826,22 @@ header .fa-times{    /* To set details of the X that appears when you click menu
   .home .content button{
     background:rgb(88, 96, 99);
   }
+  @media screen and (max-width:960px) {
+    .service-box{
+      max-width: 45%;
+    }
+  }
+  
+  @media screen and (max-width:768px) {
+    .service-box{
+      max-width: 50%;
+    }
+  }
+  
+  @media screen and (max-width:480px) {
+    .service-box{
+      max-width: 100%;
+    }
+  }
+  
 }
