--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ header .fa-bars{ /* To style the bars on the right for menu */
 .teacher{
   background:#f9f9f9;
   /* background:linear-gradient(rgba(2, 1, 1, 0.8),rgba(20, 0, 4, 0.8)), url(images/ship3.jpg) no-repeat; */
-  background:linear-gradient(rgba(65, 66, 66, 0.8),rgba(1, 71, 88, 0.8)), url(images/ship3.jpg) no-repeat;
+  background:linear-gradient(rgba(65, 66, 66, 0.8),rgba(1, 71, 88, 0.8)), url(images/star.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
